Expand dto spec for diffferent data types